# roblox-fastflag-detector

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  stable.txt
src/: main.cpp
src/cli/: args.cpp  args.hpp
src/commands/: diff.cpp  diff.hpp  dump.cpp  dump.hpp  stable.cpp  stable.hpp
src/flags/: baseline.cpp  baseline.hpp  offsets.cpp  offsets.hpp  types.cpp  types.hpp
src/net/: http_client.cpp  http_client.hpp
src/parse/: json.cpp  json.hpp
src/process/: flag_reader.cpp  flag_reader.hpp  roblox_process.cpp  roblox_process.hpp
src/util/: file_io.cpp  file_io.hpp  handle.hpp
